Fixing overflow issue on positioned element

--- a/styles/sass/_nav.scss
+++ b/styles/sass/_nav.scss
@@ -21,6 +21,11 @@
   transform: none;
 }
 
+.navContainer,
+.navLinks {
+  overflow: hidden;
+}
+
 .fa-bars {
   display: none;
 }
