--- a/styles/style.css
+++ b/styles/style.css
@@ -456,6 +456,11 @@ input[type="submit"]:hover {
           transform: none;
 }
 
+.navContainer,
+.navLinks {
+  overflow: hidden;
+}
+
 .fa-bars {
   display: none;
 }
